# EntropyScaling.jl

./: .gitignore  LICENSE  Project.toml  README.md  paper.bib  paper.md  pyproject.toml
database/: CE_RefpropRES_database.csv  ChapmanEnskog.csv  ChapmanEnskogYang2021.csv  GCES_viscosity.csv  PolynomialDiluteGas_viscosity.csv  RefpropRES_dynamic_viscosity.csv  RefpropRES_thermal_conductivity.csv  RefpropRES_viscosity.csv  viscosity_group_params.csv
dev/: .documenter-siteinfo.json  index.html  objects.inv  refs.bib  search_index.js
docs/: Project.toml  make.jl
example/: PR.jl  example.jl  methane_vis - Kopie.csv  methane_vis.csv
ext/: ClapeyronExt.jl  EntropyScalingClapeyronExt.jl  EntropyScalingJutulDarcyExt.jl  EntropyScalingMakieExt.jl  EntropyScalingPlotsExt.jl  EntropyScalingSymbolicsExt.jl  EntropyScalingUnitfulExt.jl  JutulDarcyExt.jl  MicthermExt.jl  SymbolicsExt.jl  UnitfulExt.jl  mictherm_ext.jl
pyentropyscaling/: __init__.py  juliapkg.json
src/: EntropyScaling.jl  call_entropy_scaling.jl  correlation_fun.jl  example.jl  fit_entropy_scaling.jl  zero_density_limit.jl
test/: chapman_enskog.jl  framework.jl  gces.jl  misc.jl  plotting.jl  refprop_res.jl  runtests.jl  symbolics.jl  test_framework.jl  test_gces.jl  test_internals.jl  test_misc.jl  test_others.jl  test_plotting.jl  test_refpropres.jl  test_symbolics.jl  test_unitful.jl  unitful.jl
v0.3.0/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
v0.3.1/: .documenter-siteinfo.json  index.html  refs.bib  search_index.js
v0.3.2/: .documenter-siteinfo.json  index.html  (+2 more)
(+156 files in other folders)
