[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyentropyscaling"
version = "0.1.0"
description = "Python bindings for the Julia package EntropyScaling.jl"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "juliacall>=0.9",
]
authors = [
  { name = "Sebastian Schmitt", email = "se.s.schmitt@gmail.com" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyentropyscaling*"]

[tool.setuptools.package-data]
pyentropyscaling = ["juliapkg.json"]
